<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:minHeight="550dp"
    android:orientation="vertical"
    android:background="@color/textcl"
    android:paddingBottom="0dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="3dp"
    tools:context=".DetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/textcl"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/l1"
            android:textColor="@color/textRenk"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtbaslik"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt1d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txxpercent1h"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_alignLeft="@+id/txt1d"
                    android:layout_below="@+id/txt1d"
                    android:layout_toRightOf="@+id/txt1d"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:id="@+id/l2"
                android:layout_below="@id/l1"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt24h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txxpercent24h"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/txt24h"
                    android:layout_below="@+id/txt24h"
                    android:layout_toRightOf="@+id/txt24h"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/l2"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt7d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Voluume24H"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txxpercent7d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/txt7d"
                    android:gravity="right"
                    android:layout_below="@+id/txt24h"
                    android:layout_toRightOf="@+id/txt7d"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/textcl"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtmarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/change24"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtmarket_cap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=" "
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/llayout"
            android:layout_marginLeft="30dp"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/price"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPrice_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text=" "
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >

            <WebView
                android:id="@+id/wv_grafik"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:minHeight="300dp">

            </WebView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            >
            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_id">
            </com.google.android.gms.ads.AdView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>