<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/backliner"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txisimm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=" Coni Adı"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/txtsembol"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="(sembol)"
                android:textColor="@android:color/background_dark"
                android:textSize="25sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/backlineriki"
            android:layout_weight="2"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/pricefav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/curPrice"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtpricefav"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text=" "
                    android:textColor="@color/textcl"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/totalprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Enter Quantity"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/edtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:theme="@style/editTextStyle"
                    android:ems="10"
                    android:hint="@string/editTextHind"
                    android:inputType="numberDecimal"
                    android:textColor="@color/etColor"
                    android:textSize="20sp" />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/backliner"
            android:layout_weight="2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/priceyeni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/saat"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txttotaldeger"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="0"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:background="@color/backliner"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnfavadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/arkaplan"
                android:textColor="#fefff3"
                android:text="@string/ekle" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom"
            android:background="@color/backliner"
            android:layout_weight="2"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>